[package]
name = "clex_llm"
version = "0.1.0"
repository.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
google-generative-ai-rs = { workspace = true }
tokio = { workspace = true, features = ["full"] }
