[package]
name = "cpast_api"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository.workspace = true
authors.workspace = true
homepage.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "cpast_api"

[dependencies]
actix-web = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde = { workspace = true }
config = { workspace = true, default-features = false, features = ["yaml"] }
sqlx = { workspace = true, default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
uuid = { workspace = true, features = ["v4", "serde", "v7"] }
chrono = { workspace = true, default-features = false, features = ["clock"] }
reqwest = { workspace = true, default-features = false, features = [
    "json",
    "rustls-tls",
    "cookies",
] }
log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["registry", "env-filter"] }
tracing-bunyan-formatter = { workspace = true }
thiserror = { workspace = true }
serde-aux = { workspace = true }
unicode-segmentation = { workspace = true }
rand = { workspace = true, features = ["std_rng"] }
anyhow = { workspace = true }
base64 = { workspace = true }
argon2 = { workspace = true, features = ["std"] }
validator = { workspace = true }
tracing-log = { workspace = true }
tracing-actix-web = { workspace = true }
secrecy = { workspace = true, features = ["serde"] }
actix-web-flash-messages = { workspace = true, features = ["cookies"] }
actix-session = { workspace = true, features = ["redis-session-rustls"] }
serde_json = { workspace = true }
utoipa = { workspace = true, features = [ "actix_extras" ] }
utoipa-swagger-ui = { workspace = true, features = ["actix-web", "vendored"] }
utoipa-redoc = { workspace = true, features = ["actix-web"] }
utoipa-rapidoc = { workspace = true, features = ["actix-web"] }
utoipa-scalar = { workspace = true, features = ["actix-web"] }
ccode_runner = { path = "../ccode_runner" }

[dev-dependencies]
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }
fake = { workspace = true }
wiremock = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
linkify = { workspace = true }
claims = { workspace = true }
