[package]
name = "cpastord"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
shuttle-serenity = "0.48.0"
shuttle-runtime = "0.48.0"
serenity = { version = "0.12.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = "1.40.0"
tracing = "0.1.40"
cpast = { path = "../cpast" }

