[package]
name = "cpastord"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
shuttle-serenity = { workspace = true }
shuttle-runtime = { workspace = true }
serenity = { workspace = true, default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tracing = { workspace = true }

