[package]
name = "cpastord"
version = "0.1.0"
repository.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
shuttle-serenity = { workspace = true }
shuttle-runtime = { workspace = true }
serenity = { workspace = true, default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tracing = { workspace = true }

